--- a/Kirara/Kirara/Kirara.csproj
+++ b/Kirara/Kirara/Kirara.csproj
@@ -106,6 +106,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveLoadDialogs.cs" />
     <Compile Include="ScreenSizeWin.cs">
       <SubType>Form</SubType>
     </Compile>
